bindings/ot0-hooks.h

typedef enum{ false=0, true=1} bool;
size_t OT0_C25519_PUBLIC_KEY_SIZE();
size_t OT0_C25519_PRIVATE_KEY_SIZE();
size_t OT0_C25519_SIGNATURE_SIZE();
  
typedef const void* OT0_Id;
typedef void* OT0_Buffer;
void OT0__free_vertex_buffer(OT0_Buffer);
size_t OT0_Buffer_length(void* b);
void* OT0_Buffer_data(void* b);
typedef void* OT0_VERTEX;
typedef void* OT0_ROOTS;
OT0_ROOTS OT0_make_roots();
void OT0_free_roots(OT0_ROOTS);
size_t OT0_roots_length(OT0_ROOTS roots);
size_t OT0_add_root(OT0_ROOTS, OT0_Id);
size_t OT0_add_root_endpoint(OT0_ROOTS, size_t, const void*);
OT0_VERTEX OT0_make_vertex(uint64_t id, unsigned int type, void* roots, uint64_t ts,
                           void* update_pk, void* sign_pk, void* sign_sk);
void OT0_free_vertex(OT0_VERTEX o);
OT0_Buffer OT0_vertex_serialize(const void* w, int k);
int OT0_vertex_equal_p(const void* a, const void* b);
int OT0_vertex_type(void* w);
uint64_t OT0_vertex_id(void* w);
uint64_t OT0_vertex_timestamp(void* w);
void OT0_vertex_signature_into(void* into, void* from);
void OT0_vertex_updatepk_into(void* into, void* from);
int OT0_vertex_replacement_p(void* o, void* n);
size_t OT0_vertex_roots(OT0_VERTEX);
OT0_Id OT0_root_id(void* o, size_t i);
size_t OT0_root_endpoints(void* o, size_t i);
const void* OT0_root_endpoint(void* o, size_t i, size_t j);
/* parameter controls */

typedef enum{
  PING_CHECK=1,
  PEER_PING=2,
  INCOMING_PACKET_FILTER=3,
} OT0_parameter_id;
bool OT0_parameter_int_set(OT0_parameter_id key, int64_t val);
bool OT0_parameter_pointer_set(OT0_parameter_id key, void* val);